[package]
name = "my-webasm-1"
version = "0.1.2"
authors = ["Irisawa Masaru <irisawa.masaru@gmail.com>"]
description = "My first wasm"
license = "MIT"
edition = "2018"
repository = "https://github.com/mass10/my-webasm-1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
